BugFixed (Horizontal scroll withouth content)

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 * {
     margin: 0;
@@ -212,6 +213,7 @@ p {
     z-index: 1;
     opacity: 0.4;
     pointer-events: none; 
+    max-width: 100vw;
 }
 .shape-1 {
     width: 400px;
@@ -260,12 +262,7 @@ p {
     right: -5%;
 }
 .shape-7 {
-    width: 250px;
-    height: 50px;
-    border-radius: 50%;
-    transform: rotate(25deg);
-    bottom: -240%;
-    right: -5%;
+    display: none;
 }
 @media (max-width:900px) {
     .neon-shape {
@@ -318,7 +315,7 @@ p {
         width: 250px;
         height:400px;
         border-radius: 50%;
-        bottom: -830%;
+        bottom: -730%;
         right: -60%;
     }
     .shape-7 {
@@ -864,6 +861,12 @@ width: 50%;
     }
 
     .background-animation span:nth-child(2){
+        width: 180px;
+        height: 180px;
+        bottom: 5%;
+        right: -10%;
+    }
+    .background-animation span:nth-child(3){
         width: 180px;
         height: 180px;
         bottom: 5%;
